Format yaml to respect qbm automatic changes

--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -1,15 +1,15 @@
 commands:
   dry_run: !ENV QBM_DRY_RUN
-  recheck: False
-  cat_update: False
-  tag_update: True
-  rem_unregistered: False # Plan to change to true in the future
-  tag_tracker_error: True
-  rem_orphaned: True
-  tag_nohardlinks: True
-  share_limits: True
-  skip_qb_version_check: False
-  skip_cleanup: False
+  recheck: false
+  cat_update: false
+  tag_update: true
+  rem_unregistered: false # Plan to change to true in the future
+  tag_tracker_error: true
+  rem_orphaned: true
+  tag_nohardlinks: true
+  share_limits: true
+  skip_qb_version_check: false
+  skip_cleanup: false
 
 qbt:
   host: !ENV QBT_HOST
@@ -17,7 +17,7 @@ qbt:
   pass: !ENV QBT_PASS
 
 settings:
-  force_auto_tmm: False # Will force qBittorrent to enable Automatic Torrent Management for each torrent.
+  force_auto_tmm: false # Will force qBittorrent to enable Automatic Torrent Management for each torrent.
   force_auto_tmm_ignore_tags: [] #Torrents with these tags will be ignored when force_auto_tmm is enabled.
   tracker_error_tag: tracker_issue # Will set the tag of any torrents that do not have a working tracker.
   nohardlinks_tag: no_hardlinks # Will set the tag of any torrents with no hardlinks.
@@ -26,21 +26,21 @@ settings:
   share_limits_min_seeding_time_tag: MinSeedTimeNotReached # Tag to be added to torrents that have not yet reached the minimum seeding time
   share_limits_min_num_seeds_tag: MinSeedsNotMet # Tag to be added to torrents that have not yet reached the minimum number of seeds
   share_limits_last_active_tag: LastActiveLimitNotReached # Tag to be added to torrents that have not yet reached the last active limit
-  cat_filter_completed: True # Filters for completed torrents only when running cat_update command
-  share_limits_filter_completed: False # Filters for completed torrents only when running share_limits command
-  tag_nohardlinks_filter_completed: True # Filters for completed torrents only when running tag_nohardlinks command
-  rem_unregistered_filter_completed: False # Filters for completed torrents only when running rem_unregistered command
-  cat_update_all: True # Checks and updates all torrent categories if set to True when running cat_update command, otherwise only update torrents that are uncategorized
-  disable_qbt_default_share_limits: True # Allows QBM to handle share limits by disabling qBittorrents default Share limits. Only active when the share_limits command is set to True
-  tag_stalled_torrents: True # Tags any downloading torrents that are stalled with the `stalledDL` tag when running the tag_update command
+  cat_filter_completed: true # Filters for completed torrents only when running cat_update command
+  share_limits_filter_completed: false # Filters for completed torrents only when running share_limits command
+  tag_nohardlinks_filter_completed: true # Filters for completed torrents only when running tag_nohardlinks command
+  rem_unregistered_filter_completed: false # Filters for completed torrents only when running rem_unregistered command
+  cat_update_all: true # Checks and updates all torrent categories if set to true when running cat_update command, otherwise only update torrents that are uncategorized
+  disable_qbt_default_share_limits: true # Allows QBM to handle share limits by disabling qBittorrents default Share limits. Only active when the share_limits command is set to true
+  tag_stalled_torrents: true # Tags any downloading torrents that are stalled with the `stalledDL` tag when running the tag_update command
   rem_unregistered_ignore_list: [] # Ignores a list of words found in the status of the tracker when running rem_unregistered command and will not remove the torrent if matched
 
 directory:
-  root_dir: "/home/siffreinsg/downloads/qbittorrent"
-  remote_dir: "/home/siffreinsg/downloads/qbittorrent"
-  recycle_bin: "/home/siffreinsg/downloads/qbittorrent/.Trash"
-  torrents_dir: "/home/siffreinsg/.local/share/qBittorrent/BT_backup"
-  orphaned_dir: "/home/siffreinsg/downloads/qbittorrent/orphaned"
+  root_dir: /home/siffreinsg/downloads/qbittorrent
+  remote_dir: /home/siffreinsg/downloads/qbittorrent
+  recycle_bin: /home/siffreinsg/downloads/qbittorrent/.Trash
+  torrents_dir: /home/siffreinsg/.local/share/qBittorrent/BT_backup
+  orphaned_dir: /home/siffreinsg/downloads/qbittorrent/orphaned
 
 cat:
   radarr: /home/siffreinsg/downloads/qbittorrent/radarr
@@ -97,10 +97,10 @@ share_limits:
     include_all_tags: [no_hardlinks]
     exclude_any_tags: [private]
     categories:
-      - radarr-completed
-      - radarr-sqp-completed
-      - sonarr-completed
-      - sonarr2-completed
+    - radarr-completed
+    - radarr-sqp-completed
+    - sonarr-completed
+    - sonarr2-completed
     max_ratio: 0
     max_seeding_time: 7d
     max_last_active: 7d
@@ -120,6 +120,7 @@ share_limits:
     priority: 999
     max_seeding_time: 0s
     limit_upload_speed: 0
+    cleanup: false
 
 recyclebin:
   enabled: true
@@ -130,12 +131,12 @@ recyclebin:
 orphaned:
   empty_after_x_days: 30
   exclude_patterns:
-    - "**/.DS_Store"
-    - "**/Thumbs.db"
-    - "**/@eaDir"
-    - "/data/torrents/temp/**"
-    - "**/*.!qB"
-    - "**/*_unpackerred"
+  - "**/.DS_Store"
+  - "**/Thumbs.db"
+  - "**/@eaDir"
+  - "/data/torrents/temp/**"
+  - "**/*.!qB"
+  - "**/*_unpackerred"
   max_orphaned_files_to_delete: 10
   min_file_age_minutes: 0
 
