Renamed env var

--- a/qbit_manage/.env.example
+++ b/qbit_manage/.env.example
@@ -2,21 +2,20 @@ QBT_HOST=
 QBT_USER=
 QBT_PASS=
 
-QBT_WEB_SERVER=False
+QBT_WEB_SERVER=false
 QBT_PORT=
 
-QBT_RUN=True
-QBT_DRY_RUN=False
+QBT_RUN=true
 
-QBM_WEBHOOK_ERROR=
-QBM_WEBHOOK_RUN_START=
-QBM_WEBHOOK_RUN_END=
-QBM_WEBHOOK_RECHECK=
-QBM_WEBHOOK_CAT_UPDATE=
-QBM_WEBHOOK_TAG_UPDATE=
-QBM_WEBHOOK_REM_UNREGISTERED=
-QBM_WEBHOOK_TAG_TRACKER_ERROR=
-QBM_WEBHOOK_REM_ORPHANED=
-QBM_WEBHOOK_TAG_NOHARDLINKS=
-QBM_WEBHOOK_SHARE_LIMITS=
-QBM_WEBHOOK_CLEANUP_DIRS=
+QBT_WEBHOOK_ERROR=
+QBT_WEBHOOK_RUN_START=
+QBT_WEBHOOK_RUN_END=
+QBT_WEBHOOK_RECHECK=
+QBT_WEBHOOK_CAT_UPDATE=
+QBT_WEBHOOK_TAG_UPDATE=
+QBT_WEBHOOK_REM_UNREGISTERED=
+QBT_WEBHOOK_TAG_TRACKER_ERROR=
+QBT_WEBHOOK_REM_ORPHANED=
+QBT_WEBHOOK_TAG_NOHARDLINKS=
+QBT_WEBHOOK_SHARE_LIMITS=
+QBT_WEBHOOK_CLEANUP_DIRS=
