--- a/qbit_manage/config.yaml
+++ b/qbit_manage/config.yaml
@@ -141,16 +141,16 @@ orphaned:
   min_file_age_minutes: 0
 
 webhooks:
-  error: !ENV QBM_WEBHOOK_ERROR
-  run_start: !ENV QBM_WEBHOOK_RUN_START
-  run_end: !ENV QBM_WEBHOOK_RUN_END
+  error: !ENV QBT_WEBHOOK_ERROR
+  run_start: !ENV QBT_WEBHOOK_RUN_START
+  run_end: !ENV QBT_WEBHOOK_RUN_END
   function:
-    recheck: !ENV QBM_WEBHOOK_RECHECK
-    cat_update: !ENV QBM_WEBHOOK_CAT_UPDATE
-    tag_update: !ENV QBM_WEBHOOK_TAG_UPDATE
-    rem_unregistered: !ENV QBM_WEBHOOK_REM_UNREGISTERED
-    tag_tracker_error: !ENV QBM_WEBHOOK_TAG_TRACKER_ERROR
-    rem_orphaned: !ENV QBM_WEBHOOK_REM_ORPHANED
-    tag_nohardlinks: !ENV QBM_WEBHOOK_TAG_NOHARDLINKS
-    share_limits: !ENV QBM_WEBHOOK_SHARE_LIMITS
-    cleanup_dirs: !ENV QBM_WEBHOOK_CLEANUP_DIRS
+    recheck: !ENV QBT_WEBHOOK_RECHECK
+    cat_update: !ENV QBT_WEBHOOK_CAT_UPDATE
+    tag_update: !ENV QBT_WEBHOOK_TAG_UPDATE
+    rem_unregistered: !ENV QBT_WEBHOOK_REM_UNREGISTERED
+    tag_tracker_error: !ENV QBT_WEBHOOK_TAG_TRACKER_ERROR
+    rem_orphaned: !ENV QBT_WEBHOOK_REM_ORPHANED
+    tag_nohardlinks: !ENV QBT_WEBHOOK_TAG_NOHARDLINKS
+    share_limits: !ENV QBT_WEBHOOK_SHARE_LIMITS
+    cleanup_dirs: !ENV QBT_WEBHOOK_CLEANUP_DIRS
