Limit qbm service execution

--- a/qbit_manage/qbit_manage.service
+++ b/qbit_manage/qbit_manage.service
@@ -2,6 +2,7 @@
 Description=qBit Manage
 After=network.target
 OnFailure=notify_onFailure@%i.service
+Conflicts=qbit_manage.service
 
 [Service]
 Type=oneshot
