Add log and env example

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ PLEX_URL="http://plex.local:32400"
 PLEX_TOKEN="anotherkey"
 PLEX_SERVER_NAME="Black Pearl"
 
+PLEX_CLEANUP_EXCEPTIONS=Leaving Soon - Movies,Leaving Soon - 4K Movies,Leaving Soon - TV Shows
+
 # GitHub API
 GITHUB_TOKEN="wowatoken"
 
